2011-03-10  Kris Jordan  <krisjordan@gmail.com>

Reviewed by Alexey Proskuryakov.

        Testing the improved Accept header as per bug 27267.
        https://bugs.webkit.org/show_bug.cgi?id=27267

        * http/tests/misc/xhtml-expected.txt: Tests against improved Accept header.
2011-03-10  Kris Jordan  <krisjordan@gmail.com>

        Reviewed by Alexey Proskuryakov.

        Improve default Accept header to give preference to HTML over XML.
        https://bugs.webkit.org/show_bug.cgi?id=27267

        * loader/FrameLoader.cpp:Changed default accept header to match
        FireFox' as per bug 27267.

Canonical link: https://commits.webkit.org/70664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80776 268f45cc-cd09-0410-ab3c-d52691b4dbfc